default_old/objects/Zoho__c/fields/log_success__c.field-meta.xml
<CustomField>
    <fullName>log_success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>log success in Zoho Log Object</description>
    <inlineHelpText>log success in Zoho Log Object</inlineHelpText>
    <label>log success</label>
    <type>Checkbox</type>
</CustomField>