default_old/objects/Zoho__c/fields/Zoho_AuthToken__c.field-meta.xml
<CustomField>
    <fullName>Zoho_AuthToken__c</fullName>
    <description>Zoho AuthToken</description>
    <inlineHelpText>Zoho AuthToken</inlineHelpText>
    <label>Zoho AuthToken</label>
    <length>250</length>
    <type>Text</type>
</CustomField>