default_old/objects/Zoho__c/fields/Zoho_CRM_Url__c.field-meta.xml
<CustomField>
    <fullName>Zoho_CRM_Url__c</fullName>
    <description>Zoho CRM Url</description>
    <inlineHelpText>Zoho CRM Url</inlineHelpText>
    <label>Zoho CRM Url</label>
    <length>250</length>
    <type>Text</type>
</CustomField>